# blacklist_service_entrega_2

./: .dockerignore  .gitignore  Dockerfile  README.md  appspec.yaml  blacklist_service.postman_collection.json  buildspec.yml  pyproject.toml  requirements.txt  taskdef.json
docs/: INFORME.md  INFORME_ENTREGA2.md  INFORME_ENTREGA3.md
terraform/: beanstalk.tf  codebuild.tf  fargate.tf  main.tf  outputs.tf  rds.tf  terraform.tfstate  variables.tf
tests/: test_blacklists.py
